--- a/css/main.css
+++ b/css/main.css
@@ -2,17 +2,38 @@ body {
     font-family: 'Raleway', sans-serif;
     width: 100%;
     height: 100%;
-    background-color: aliceblue;
+    background-color: #feffff;
+}
+
+#name {
+    font-size: 120px;
 }
 
 h1 {
-    font-size: 95px;
-    font-weight: 400;
+    font-weight: 100;
+    color: #98dafc;
     text-align: center;
     width: 100%;
 }
 
-.btn{
+.site-content {
+    font-weight: 400;
+    text-align: center;
+}
+
+.content-text, .resume {
+    font-size: 50px;
+    padding: 3%;
+    width: 100%;
+    color: #daad86;
+}
+
+#reslink {
+    text-decoration: none;
+     color: #daad86;
+}
+
+.btn {
     -webkit-appearance: none;
     border: 0;
     background: transparent;
@@ -20,7 +41,7 @@ h1 {
 }
 
 .btn:hover {
-    background-color: aliceblue;
+    background-color: inherit;
 }
 
 #my-twitter {
@@ -41,4 +62,3 @@ h1 {
     bottom: 0;
     width: 100%;
 }
-
