--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: #feffff;
+ 
 }
 
 #name {
@@ -10,27 +11,31 @@ body {
 }
 
 h1 {
-    font-weight: 100;
+    font-weight: 400;
     color: #98dafc;
     text-align: center;
     width: 100%;
 }
 
 .site-content {
-    font-weight: 400;
+    font-weight: 100;
     text-align: center;
 }
 
 .content-text, .resume {
-    font-size: 50px;
-    padding: 3%;
+    font-size: 65px;
     width: 100%;
+    padding: 1.3%;
     color: #daad86;
 }
 
-#reslink {
+#link {
     text-decoration: none;
      color: #daad86;
+}
+
+#link:hover {
+    color:#312c32;
 }
 
 .btn {
@@ -61,4 +66,5 @@ h1 {
     position: absolute;
     bottom: 0;
     width: 100%;
+       border-bottom: 7px solid #98dafc;
 }
