--- a/css/main.css
+++ b/css/main.css
@@ -31,11 +31,33 @@ h1 {
 
 #link {
     text-decoration: none;
+    position: relative;
      color: #daad86;
 }
 
 #link:hover {
     color:#312c32;
+}
+
+#link:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+#link:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
 }
 
 .btn {
