--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ h1 {
     text-align: center;
 }
 
-.content-text, .resume {
+.content-text {
     font-size: 65px;
     width: 100%;
     padding: 1.3%;
@@ -41,6 +41,7 @@ h1 {
 
 #link:before {
   content: "";
+  font-size: 20px;
   position: absolute;
   width: 100%;
   height: 2px;
