--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,8 @@ body {
  
 }
 
-#name {
-    font-size: 120px;
+#title {
+    font-size: 100px;
     text-decoration: none;
     font-weight: 400;
     color: #98dafc;
@@ -16,7 +16,7 @@ body {
 }
 
 
-#name:hover {
+#title:hover {
     text-decoration-color: #feffff;
 }
 
@@ -90,10 +90,33 @@ body {
     color: #333333;
 }
 
-.contact-section {
+#about {
+    padding: 6%;
+    font-size: 28px;
+    font-weight: 100;
     text-align: center;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-       border-bottom: 7px solid #98dafc;
 }
+
+.project-title {
+    padding-left: 1%;
+    border-left: 6px solid #98dafc;
+    font-size: 40px;
+    font-weight: 400;
+}
+
+.text {
+    font-weight: 100;
+    padding-left: 2%;
+    padding-right: 2%;
+    font-size: 25px;
+}
+
+.footer {
+    text-align: center !important;
+    position: absolute;
+    bottom: 0 !important;
+    width: 100%;
+    border-bottom: 10px solid #98dafc;
+    font-size: 50px;
+}
+
