--- a/css/main.css
+++ b/css/main.css
@@ -148,3 +148,21 @@ body {
     font-size: 50px;
 }
 
+
+@media screen and (max-width: 1000px) {
+    
+    .content-text {
+    font-size: 70px;
+    width: 100%;
+    padding: 2%;
+    /*color: #daad86;*/
+    color: #b56969;
+}
+    
+    #title {
+    padding-bottom: 1%;
+    margin: 0;
+}
+    
+    
+}
